--- a/Lab06_Meteo/src/main/resources/fxml/Scene.fxml
+++ b/Lab06_Meteo/src/main/resources/fxml/Scene.fxml
@@ -8,14 +8,17 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
-
+<?import javafx.scene.text.Font?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="364.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="it.polito.tdp.meteo.FXMLController">
    <top>
-      <Label text="Lab6_Meteo" BorderPane.alignment="CENTER">
+      <Label text="Calcolatore umidità" BorderPane.alignment="CENTER">
          <BorderPane.margin>
             <Insets top="20.0" />
          </BorderPane.margin>
+         <font>
+            <Font size="16.0" />
+         </font>
       </Label>
    </top>
    <center>
@@ -52,7 +55,7 @@
                   <Insets left="20.0" />
                </VBox.margin>
             </HBox>
-            <TextArea fx:id="txtResult" editable="false" prefHeight="200.0" prefWidth="200.0">
+            <TextArea fx:id="txtResult" prefHeight="200.0" prefWidth="200.0" wrapText="true">
                <VBox.margin>
                   <Insets left="10.0" right="10.0" top="10.0" />
                </VBox.margin>
